--- a/client/app.scss
+++ b/client/app.scss
@@ -1,4 +1,5 @@
 /* Import Variables */
+@import '../node_modules/cutestrap/dist/css/cutestrap.css';
 @import "variables.import.scss";
 
 *,
@@ -15,6 +16,7 @@ body {
   width: 100vw;
   height: 100vh;
   overflow: hidden;
+  font-family: 'Avenir', 'Helvetica-Neue', 'Helvetica', sans-serif;
 }
 div[ui-view] {
   width: 100%;
