--- a/client/auth/auth.scss
+++ b/client/auth/auth.scss
@@ -1,5 +1,32 @@
-.login {
-  width: 100%;
+.login,
+.signup {
+  padding: 30px;
+  width:  100%;
   height: 100%;
-  background-color: $color-blue;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  // background-color: $color-blue;
+}
+.login .page-title { margin-top: 60px; }
+.login__form,
+.signup__form {
+  width: 80%;
+  max-width: 500px;
+  min-width: 300px;
+  display: flex;
+  flex-flow: column nowrap;
+}
+
+.login__form [type="submit"],
+.signup__form [type="submit"] {
+  text-transform: uppercase;
+  width: 100%;
+}
+
+.login__error-msg,
+.signup__error-msg {
+  margin-top: 24px;
+  color: $color-red;
 }
