--- a/client/auth/auth.scss
+++ b/client/auth/auth.scss
@@ -30,3 +30,37 @@
   margin-top: 24px;
   color: $color-red;
 }
+
+.login .timer {
+  position: relative;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: flex-end;
+  margin-right: 15px;
+
+  .ripple {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border: 2px solid grey;
+    animation: .5s ease alternate infinite RIPPLE;
+  }
+}
+
+@keyframes RIPPLE {
+  from {
+    transform: scale(1);
+    border: 2px solid lightgrey;
+  }
+  to {
+    transform: scale(1.2);
+    border: 1px solid grey;
+  }
+}
